--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 <div class="container">
 
   <div class="hero">
-    <img class="opening-speechmarks" src="./assets/images/speechmarks.png" alt="speechmarks" />
     <div class="hero-copy">
+      <img class="opening-speechmarks" src="./assets/images/speechmarks.png" alt="speechmarks" />
       <blockquote>
         <strong>Coaching helps you</strong> to get closer to the answers and achieve things you might previously have thought not possible.<br /> It helps you <strong>unlock your potential.</strong>
       </blockquote>
@@ -102,7 +102,26 @@ layout: default
 
     <p>This paragraph will make you want to call me.</p>
 
-    <p>The contact information will go here.</p>
+    <div class="deck">
+      <div class="card quote_card">
+        <blockquote>
+          <img class="opening-speechmarks" src="./assets/images/speechmarks.png" alt="speechmarks" />
+          Al's a top bloke. Worth giving him a call.
+          <p>– Someone Cool</p>
+        </blockquote>
+      </div>
+      <div class="card">
+        <div class="card_heading">
+          <h2>Contact</h2>
+        </div>
+        <div class="card_copy">
+          <br />
+          <p>Email: <a href="mailto:{{ site.email }}" target="_blank">{{ site.email }}</a></p>
+          <p>Phone: <a href="tel:+447881023637">+44 7881 023 637</a></p>
+          <p>LinkedIn: <a href="https://linkedin.com/in/alanmead" target="_blank">linkedin/in/alanmead</a></p>
+        </div>
+      </div>
+    </div>
 
   </section>
 
