--- a/404.html
+++ b/404.html
@@ -2,23 +2,18 @@
 layout: default
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
 <div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <section id="404">
+    <h1>404... Oh no. Disaster!</h1>
+    <p>Not sure what's happened here, but we'll find out and fix it as quickly as possible!</p>
+    <p>In the meantime, try one of these links: </p>
+    <ul>
+      <li><a href={{ "/about" | prepend: site.url }}>About</a></li>
+      <li><a href={{ "/coaching" | prepend: site.url }}>Personal Coaching</a></li>
+      <li><a href={{ "/coachingworkshops" | prepend: site.url }}>Coaching Workshops</a></li>
+      <li><a href={{ "/performancecoaching" | prepend: site.url }}>Performance and Executive Coaching</a></li>
+      <li><a href={{ "/training" | prepend: site.url }}>Training</a></li>
+      <li><a href="#contact" class="smooth-scroll">Contact</a></li>
+    </ul>
+  </section>
 </div>
