Fix broken links

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@ layout: default
       </footer>
     </blockquote>
 
-    <p><a href={{ "/coaching" | prepend: site.url }} class="smooth-scroll">Coaching</a> helps you to get closer to those answers and achieve things you might previously have not thought possible. It helps you to unlock your potential.</p>
+    <p><a href={{ "/coaching" | prepend: site.url }}>Coaching</a> helps you to get closer to those answers and achieve things you might previously have not thought possible. It helps you to unlock your potential.</p>
 
     <p>I work with individuals and businesses to help people realise their potential by helping them to work out the answers to those challenging questions and issues.</p>
 
-    <p>My <a href="#" class="smooth-scroll">Coaching Workshops</a> introduce the powerful benefits of coaching to managers at all levels to help them to better engage with, and empower, their teams and colleagues.</p>
+    <p>My <a href={{ "/coachingworkshops" | prepend: site.url }}>Coaching Workshops</a> introduce the powerful benefits of coaching to managers at all levels to help them to better engage with, and empower, their teams and colleagues.</p>
 
-    <p><a href="#" class="smooth-scroll">Performance and Executive Coaching</a> is all about achieving goals. I help people across all levels of business to grow, develop and improve in their role, from the first-time manager to the experienced executive.</p>
+    <p><a href={{ "/performancecoaching" | prepend: site.url }}>Performance and Executive Coaching</a> is all about achieving goals. I help people across all levels of business to grow, develop and improve in their role, from the first-time manager to the experienced executive.</p>
 
-    <p>As well as Coaching, I’ve been designing and delivering <a href="#training" class="smooth-scroll">Training</a> since 2012. My training focuses on helping people have better conversations. Coaching plays an important part in my training too as it doesn’t have to be a one-to-one experience.</p>
+    <p>As well as Coaching, I’ve been designing and delivering <a href={{ "/training" | prepend: site.url }}>Training</a> since 2012. My training focuses on helping people have better conversations. Coaching plays an important part in my training too as it doesn’t have to be a one-to-one experience.</p>
 
     <div class="deck">
 
