Rid Lorum ipsum

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ layout: default
           <h2>Training</h2>
         </div>
         <div class="card_copy">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed dThe essence of my training is to help colleagues, Managers, Directors and their teams to have better conversations at work. I offer a range of training courses where those conversations are all about leading and managing teams, giving colleagues support and feedback, dealing with difficult situations, or making better, more compelling presentations.</p>
+          <p>The essence of my training is to help colleagues, Managers, Directors and their teams to have better conversations at work. I offer a range of training courses where those conversations are all about leading and managing teams, giving colleagues support and feedback, dealing with difficult situations, or making better, more compelling presentations.</p>
         </div>
         <a class="card_link" href={{"/training" | prepend: site.url}}>Read more</a>
       </div>
