--- a/index.html
+++ b/index.html
@@ -8,36 +8,40 @@ layout: default
     <div class="hero-copy">
       <img class="opening-speechmarks" src={{ "/assets/images/speechmarks.png" | prepend: site.url }} alt="speechmarks" />
       <blockquote>
-        <strong>Coaching helps you</strong> to get closer to the answers and achieve things you might previously have thought not possible.<br /> It helps you <strong>unlock your potential.</strong>
+        <strong>Coaching and training help you</strong> to get closer to the answers and achieve things you might previously have thought not possible.<br /> <strong>They help you unlock your potential.</strong>
+         
+
+
       </blockquote>
       <!--<img class="closing-speechmarks" src="./assets/images/speechmarks.png" alt="speechmarks" />-->
     </div>
   </div>
 
   <section id="about">
-    <h1>Hi – I’m Alan. I’m a qualified Coach and an experienced Trainer.</h1>
+    <h1>Hi – I’m Alan. I’m a qualified Coach and an experienced, award winning Trainer.</h1>
 
     <p>I believe we are all capable of so much more. Wherever we want to thrive and really achieve our dreams and ambitions. At work and at home.</p>
 
-    <p>But it’s easy to get blocked and lose our way, then spend too much time looking elsewhere for the answers that are actually already within us.</p>
-
     <blockquote class="copy-quote">
       <img class="opening-speechmarks" src={{ "/assets/images/speechmarks.png" | prepend: site.url }} alt="speechmarks" />
-      Alan came into my life when it started to change. With his coaching I felt empowered to take the reins and develop a sense of control. With his help, I found I was able to take a breath and look objectively at decisions I had to make. And then I found I was able to breathe on my own.
+      Alan is a hugely compassionate man, who approaches each coaching session with kindness and a genuine desire to help both the individual and the organisation. His work with our team has had a huge impact on their happiness. We don’t measure the effectiveness of Alan’s work on productivity, because we genuinely want our team to just be the happiest and best versions of themselves that they can be. We know this isn’t everyone’s bag, and some people need/want a more tangible result. <br />But frankly, whatever your goal is, Alan’s your man
+
       <footer>
-        Mary Myzer, Advanced Skills Teacher, London
+       Alison Weir, Founder, Wonderland Communications
       </footer>
     </blockquote>
 
     <p><a href={{ "/coaching" | prepend: site.url }}>Coaching</a> helps you to get closer to those answers and achieve things you might previously have not thought possible. It helps you to unlock your potential.</p>
 
-    <p>I work with individuals and businesses to help people realise their potential by helping them to work out the answers to those challenging questions and issues.</p>
+    <p><a href={{ "/training" | prepend: site.url }}>Training</a> helps managers become the confident, supportive manager and leader that unites and leads teams regardless of the level they work at.</p>
 
-    <p>My <a href={{ "/coachingworkshops" | prepend: site.url }}>Coaching Workshops</a> introduce the powerful benefits of coaching to managers at all levels to help them to better engage with, and empower, their teams and colleagues.</p>
+    <p>My new training course, <a href={{ "/downloads/theConfidentManager.pdf" | prepend: site.url }}>The Confident Manager</a>, helps transform hesitant, apprehensive, uncertain managers into skilled, effective, assured managers and leaders.</p>
+
+    <p>I deliver <a href={{ "/coachingworkshops" | prepend: site.url }}>Coaching Workshops</a> that introduce the powerful benefits of coaching to managers at all levels to help them to better engage with, and empower, their teams and colleagues.</p>
 
     <p><a href={{ "/performancecoaching" | prepend: site.url }}>Performance and Executive Coaching</a> is all about achieving goals. I help people across all levels of business to grow, develop and improve in their role, from the first-time manager to the experienced executive.</p>
 
-    <p>As well as Coaching, I’ve been designing and delivering <a href={{ "/training" | prepend: site.url }}>Training</a> since 2012. My training focuses on helping people have better conversations. Coaching plays an important part in my training too as it doesn’t have to be a one-to-one experience.</p>
+    <p>I also deliver engaging, dynamic sessions on feedback, managing performance, delivering impactful presentations with confidence and without the nerves, and managing people through change.</p>
 
     <div class="deck">
 
@@ -49,6 +53,16 @@ layout: default
           <p>We are all faced with challenging situations and difficult decisions from time to time. Coaching – many people call it Life Coaching – can help you to understand how you really feel about those situations and decisions and plan how to approach and tackle them.</p>
         </div>
         <a class="card_link" href={{"/coaching" | prepend: site.url}}>Read more</a>
+      </div>
+
+      <div class="card">
+        <div class="card_heading">
+          <h2>Training</h2>
+        </div>
+        <div class="card_copy">
+          <p>The essence of my training is to help colleagues, Managers, Directors and their teams to have better conversations at work. I offer a range of training courses where those conversations are all about leading and managing teams, giving colleagues support and feedback, dealing with difficult situations, or making better, more compelling presentations.</p>
+        </div>
+        <a class="card_link" href={{"/training" | prepend: site.url}}>Read more</a>
       </div>
 
       <div class="card">
@@ -69,16 +83,6 @@ layout: default
           <p>In business, as in our daily lives, we can get blocked, lose our way or just get so wrapped up in the day to day that we lose sight of what we really want to achieve. Or indeed are expected to achieve. As a Coach, I work to help people in all spheres of business deal with potential stumbling blocks, improve performance, solve problems and accomplish goals.</p>
         </div>
         <a class="card_link" href={{"/performancecoaching" | prepend: site.url}}>Read more</a>
-      </div>
-
-      <div class="card">
-        <div class="card_heading">
-          <h2>Training</h2>
-        </div>
-        <div class="card_copy">
-          <p>The essence of my training is to help colleagues, Managers, Directors and their teams to have better conversations at work. I offer a range of training courses where those conversations are all about leading and managing teams, giving colleagues support and feedback, dealing with difficult situations, or making better, more compelling presentations.</p>
-        </div>
-        <a class="card_link" href={{"/training" | prepend: site.url}}>Read more</a>
       </div>
 
     </div>
